--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <body>
 <section class="page-header">
     <div class="project-image">
-        <img src="{{ site.github.repository_url }}/blob/master/profile-pic.png" class="profile-pic">
+        <img src="https://raw.githubusercontent.com/yav1987/resume/master/profile-pic.png" width="200" class="profile-pic">
     </div>
     <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
     <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
