--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,18 +11,22 @@
 </head>
 <body>
 <section class="page-header">
-    <div class="project-image">
-        <img src="https://raw.githubusercontent.com/yav1987/resume/master/profile-pic.png" width="200" class="profile-pic">
+    <div class="page-header-container">
+        <div class="project-image">
+            <img src="https://raw.githubusercontent.com/yav1987/resume/master/profile-pic.png" width="200" class="profile-pic">
+        </div>
+        <div class="project-data">
+            <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+            <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+            {% if site.github.is_project_page %}
+            <!--<a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>-->
+            {% endif %}
+            <!--{% if site.show_downloads %}-->
+            <!--<a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>-->
+            <!--<a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>-->
+            <!--{% endif %}-->
+        </div>
     </div>
-    <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-    <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-    {% if site.github.is_project_page %}
-    <!--<a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>-->
-    {% endif %}
-    {% if site.show_downloads %}
-    <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-    <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-    {% endif %}
 </section>
 
 <section class="main-content">
