Fixing site theme variables

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,19 +5,22 @@
 
 .page-header {
   float: left;
-  width: 100%
-;
+  width: 100%;
   .page-header-container {
     @media (min-width: 64rem){
-      max-width: 64rem;
+      max-width: 52rem;
       margin: 0 auto;
       display: block;
     }
     .project-image {
       float: left;
       width: 20%;
-      overflow: hidden;
-      border-radius: 100%;
+      img{
+        overflow: hidden;
+        border-radius: 100%;
+        width: 200px;
+        height: auto;
+      }
     }
     .project-data {
       float: left;
