--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,7 @@
     .project-data {
       float: left;
       width: 75%;
+      text-align: left;
       .project-name {
         font-size: 25px;
       }
