--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
         <div class="project-data">
             <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
             <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+            <h3>Guatemala City</h3>
+            <h3>(502) 4022-9156</h3>
+            <h3>Skype: yannick.villatoro</h3>
             {% if site.github.is_project_page %}
             <!--<a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>-->
             {% endif %}
