--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,9 +25,16 @@
     .project-data {
       float: left;
       width: 75%;
+      padding-left: 30px;
       text-align: left;
       .project-name {
         font-size: 25px;
+      }
+      .project-tagline{
+        margin-top: 0px;
+      }
+      h3{
+        opacity: 0.7;
       }
     }
   }
