--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,8 +33,9 @@
       .project-tagline{
         margin-top: 0px;
       }
-      h3{
+      h4{
         opacity: 0.7;
+        font-weight: normal;
       }
     }
   }
