--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,10 +32,13 @@
       }
       .project-tagline{
         margin-top: 0px;
+        margin-bottom: 20px;
       }
       h4{
         opacity: 0.7;
         font-weight: normal;
+        margin-top: 0px;
+        margin-bottom: 5px;
       }
     }
   }
