Front-end fixes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@
         border-radius: 100%;
         width: 200px;
         height: auto;
+        border:2px solid white;
       }
     }
     .project-data {
