--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,9 @@
 </section>
 
 <section class="main-content">
-    {{ content }}
-
+    <div class="wrapper">
+        {{ content }}
+    </div>
     <footer class="site-footer">
         <!--{% if site.github.is_project_page %}-->
         <!--<span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>-->
