Adding css for headings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,3 +51,18 @@
     padding-top: 50px;
   }
 }
+.main-content h1,
+.main-content h2,
+.main-content h3,
+.main-content h4,
+.main-content h5,
+.main-content h6{
+  margin-bottom: 10px;
+  margin-top: 0px;
+}
+.main-content h3,
+.main-content h4,
+.main-content h5,
+.main-content h6 {
+  color: #155799;
+}
