--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
             <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
             <h4>Guatemala City</h4>
-            <h4>(502) 4022-9156</h4>
+            <h4><a style="color: #FFF; text-decoration:none;" href="tel:+50240229156">(502) 4022-9156</a></h4>
             <h4>Skype: yannick.villatoro</h4>
             {% if site.github.is_project_page %}
             <!--<a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>-->
