--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,10 @@
         <div class="project-data">
             <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
             <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-            <h4>Guatemala City</h4>
-            <h4><a style="color: #FFF; text-decoration:none;" href="tel:+50240229156">(502) 4022-9156</a></h4>
-            <h4>Skype: yannick.villatoro</h4>
+            <h4><i class="fa fa-map-marker" aria-hidden="true"></i> Guatemala City</h4>
+            <h4><i class="fa fa-phone" aria-hidden="true"></i><a style="color: #FFF; text-decoration:none;" href="tel:+50240229156">(502) 4022-9156</a></h4>
+            <h4><i class="fa fa-skype" aria-hidden="true"></i> yannick.villatoro</h4>
+            <h4><a style="color: #FFF; text-decoration:none;" href="www.linkedin.com/in/yannick-alexander-villatoro-a182b811"><i class="fa fa-linkedin" aria-hidden="true"></i> </a></h4>
             {% if site.github.is_project_page %}
             <!--<a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>-->
             {% endif %}
