--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@
     }
     .project-image {
       float: left;
+      width:100%;
       @media (min-width: 64rem){
         width: 25%;
       }
