--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <section class="page-header">
     <div class="page-header-container">
         <div class="project-image">
-            <img src="https://raw.githubusercontent.com/yav1987/resume/master/profile-pic.png" width="200" class="profile-pic">
+            <img src="https://raw.githubusercontent.com/yav1987/resume/master/yannick_villatoro.jpeg" width="200" class="profile-pic">
         </div>
         <div class="project-data">
             <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
